--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "simple financial accounting program",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest"
   },
   "author": "Dustin McDowell",
   "license": "ISC",
@@ -14,5 +15,8 @@
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
