--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "simple financial accounting program",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "jest"
+    "start": "node server.js",
+    "start-dev": "export NODE_ENV='development' && node server.js",
+    "test": "export NODE_ENV='test' && jest"
   },
   "author": "Dustin McDowell",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
   }
 }
